# DatabaseWorker_RestAPI

./: README.md
client/: CMakeLists.txt
server/: CMakeLists.txt
server/src/: CMakeLists.txt  main.cpp
server/src/server-https/: CMakeLists.txt  server-https.cpp  server-https.h
